2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b2

 * Fix: comments_overview_for_all was not working proper.

        Thanks to jifl from forum.

 * Fix: Added better support for Zikula (aka postNuke 0.8+)

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b1

 * Change: Code cleanup, indenting, wording.

2008-08-20 Jens Tkotz <jens@peino.de> 1.6-RC1

Happy birthday Mom!

 Recently, we retained Gotham Digital Science (GDS) to perform
 security audits on Gallery 1.6

 GDS found bugs in 21 catecories as they are:

 --- PRIO 1 ----
  1 - Insecure Command Execution
  2 - Cross Site Scripting (XSS)
  3 - Unauthorized Access to File System
  4 - Role-Based Authorization Not Adequately Enforced

 --- PRIO 2 ----
  5 - Application Insecurely Discloses Potentially Sensitive Data
  6 - Inadequate Password Complexity Enforcement
  7 - New Password Functionality Susceptible to Brute Force Attacks

 --- PRIO 3 ----
  8 - Inadequate Application Error Handling and Suppression
  9 - Username Enumeration
  10 - Log Forging

 --- PRIO 4 ----
  11 - Denial of Service Condition Possible
  12 - Un-mapped File Extensions Allow Source Code Disclosure
  13 - Lack of Web Root Clean-up and Insecure File Organization
  14 - Logout Option not Available on all Application Pages
  15 - Pages Do Not Refresh After Idle Session Timeout
  16 - Sensitive POST Data Exposed to Browser Caching
  17 - Password Reset Does not Include at least One Challenge Question
  18 - Application Account Lockout not Enforced
  19 - Sensitive Data Passed in Query String
  20 - Scope of HTTP Request Variables Not Enforced
  21 - User Controllable Messages


 A Local File Include Vulnerability was found by a different company.

   We say thank you to:
   The security researchers from Digital Security company
   http://dsec.ru

 If you need more detailed information on the bugs and how they were fixed,
 please write a mail to security@menalto.com

